--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,20 +36,22 @@ jobs:
     
     - name: Test optimization modules
       run: |
-        python -c "from src.markowitz import markowitz_weights; print('✅ Markowitz module import successful!')"
-        python -c "from src.risk_parity import risk_parity_weights; print('✅ Risk parity module import successful!')"
-        python -c "from src.monte_carlo import monte_carlo_simulation; print('✅ Monte Carlo module import successful!')"
-        python -c "from src.black_litterman import black_litterman_weights; print('✅ Black-Litterman module import successful!')"
-        python -c "from src.ml_predictor import ml_predictor; print('✅ ML predictor module import successful!')"
-        python -c "from src.hybrid_model import hybrid_weights; print('✅ Hybrid model module import successful!')"
-        python -c "from src.custom_metrics_opt import custom_metrics_weights; print('✅ Custom metrics module import successful!')"
-        python -c "from src.walkforward_backtest import walkforward_backtest; print('✅ Walkforward backtest module import successful!')"
+        cd src
+        python -c "from markowitz import markowitz_weights; print('✅ Markowitz module import successful!')"
+        python -c "from risk_parity import risk_parity_weights; print('✅ Risk parity module import successful!')"
+        python -c "from monte_carlo import monte_carlo_simulation; print('✅ Monte Carlo module import successful!')"
+        python -c "from black_litterman import black_litterman_weights; print('✅ Black-Litterman module import successful!')"
+        python -c "from ml_predictor import ml_predictor; print('✅ ML predictor module import successful!')"
+        python -c "from hybrid_model import hybrid_weights; print('✅ Hybrid model module import successful!')"
+        python -c "from custom_metrics_opt import custom_metrics_weights; print('✅ Custom metrics module import successful!')"
+        python -c "from walkforward_backtest import walkforward_backtest; print('✅ Walkforward backtest module import successful!')"
     
     - name: Test basic functionality
       run: |
+        cd src
         python -c "
         import numpy as np
-        from src.risk_parity import risk_parity_weights
+        from risk_parity import risk_parity_weights
         
         # Test basic functionality
         cov_matrix = np.array([[0.01, 0.005], [0.005, 0.01]])
