--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,32 +30,16 @@ jobs:
       run: |
         python -c "import pandas, numpy, matplotlib, yfinance, scipy, sklearn; print('✅ All basic imports successful!')"
     
-    - name: Test data utilities
-      run: |
-        python -c "from src.data_utils import download_prices; print('✅ Data utils import successful!')"
-    
-    - name: Test optimization modules
+    - name: Test module imports
       run: |
         cd src
-        python -c "from markowitz import markowitz_weights; print('✅ Markowitz module import successful!')"
-        python -c "from risk_parity import risk_parity_weights; print('✅ Risk parity module import successful!')"
-        python -c "from monte_carlo import monte_carlo_simulation; print('✅ Monte Carlo module import successful!')"
-        python -c "from black_litterman import black_litterman_weights; print('✅ Black-Litterman module import successful!')"
-        python -c "from ml_predictor import ml_predictor; print('✅ ML predictor module import successful!')"
-        python -c "from hybrid_model import hybrid_weights; print('✅ Hybrid model module import successful!')"
-        python -c "from custom_metrics_opt import custom_metrics_weights; print('✅ Custom metrics module import successful!')"
-        python -c "from walkforward_backtest import walkforward_backtest; print('✅ Walkforward backtest module import successful!')"
-    
-    - name: Test basic functionality
-      run: |
-        cd src
-        python -c "
-        import numpy as np
-        from risk_parity import risk_parity_weights
-        
-        # Test basic functionality
-        cov_matrix = np.array([[0.01, 0.005], [0.005, 0.01]])
-        weights = risk_parity_weights(cov_matrix)
-        print(f'✅ Risk parity weights calculated: {weights}')
-        print('✅ Basic functionality test passed!')
-        "
+        python -c "import markowitz; print('✅ Markowitz module import successful!')"
+        python -c "import risk_parity; print('✅ Risk parity module import successful!')"
+        python -c "import monte_carlo; print('✅ Monte Carlo module import successful!')"
+        python -c "import black_litterman; print('✅ Black-Litterman module import successful!')"
+        python -c "import ml_predictor; print('✅ ML predictor module import successful!')"
+        python -c "import hybrid_model; print('✅ Hybrid model module import successful!')"
+        python -c "import custom_metrics_opt; print('✅ Custom metrics module import successful!')"
+        python -c "import walkforward_backtest; print('✅ Walkforward backtest module import successful!')"
+        python -c "import data_utils; print('✅ Data utils module import successful!')"
+        python -c "import metrics_utils; print('✅ Metrics utils module import successful!')"
